--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
                             <a href="https://github.com/ensarakbas77" target="_blank" class="social-link">
                                 <i class="bi bi-github"></i>
                             </a>
-                            <a href="https://linkedin.com/in/ensarakbas" target="_blank" class="social-link">
+                            <a href="https://www.linkedin.com/in/ensarakbas17/" target="_blank" class="social-link">
                                 <i class="bi bi-linkedin"></i>
                             </a>
-                            <a href="mailto:ensarakbas77@example.com" class="social-link">
+                            <a href="mailto:ensarr.akbas@gmail.com" class="social-link">
                                 <i class="bi bi-envelope"></i>
                             </a>
                         </div>
