--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                 <p class="text-muted mb-4">
                                     Merhaba! Ben Ensar Akbaş, yazılım geliştirme alanında kendimi sürekli geliştiren,
                                     yeni teknolojileri öğrenmeye tutkulu bir developer adayıyım. Kod yazmanın bir sanat
-                                    olduğuna inanıyor ve her projede kaliteli, temiz kod üretmeye odaklanıyorum.
+                                    olduğuna inanıyor ve her projede kaliteli, temiz kod üretmeye odaklanıyorum...
                                 </p>
 
                             </div>
