update mail adress

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                                 <h5>E-mail</h5>
                                 <p class="text-light">
                                     <a href="mailto:ensarakbas77@example.com" class="text-light text-decoration-none">
-                                        ensarr.akbas@google.com
+                                        ensarr.akbas@gmail.com
                                     </a>
                                 </p>
                             </div>
