update index.html (match-prediction section)

--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
                     <div class="row align-items-center">
                         <div class="col-lg-6 mb-4">
                             <div class="about-content">
-                                <h3 class="mb-3">Yazılım Geliştirici Adayı</h3>
+                                <h3 class="mb-3">Merhaba</h3>
                                 <p class="text-muted mb-4">
-                                    Merhaba! Ben Ensar Akbaş, Kocaeli Üniversitesi Bilişim Sistemleri Mühendisliği 3.
+                                    Ben Ensar Akbaş, Kocaeli Üniversitesi Bilişim Sistemleri Mühendisliği 3.
                                     sınıf öğrencisiyim. Yazılım geliştirme alanında kendimi sürekli geliştiren ve yeni
                                     teknolojilere tutkuyla ilgi duyan bir geliştirici adayıyım. Özellikle yapay zeka
                                     gibi yenilikçi teknolojilere büyük ilgi duyuyor, projelerde hem öğrenmekten hem de
@@ -343,9 +343,13 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="project-card">
                         <div class="project-image">
+                            <div style="display: flex; justify-content: center; margin-top: 20px;">
+                                <img src="assets/teams.jpeg" alt="">
+                            </div>
                             <div class="project-overlay">
                                 <div class="project-links">
-                                    <a href="#" class="project-link" title="GitHub">
+                                    <a href="https://github.com/ensarakbas77/Match-Result-Prediction" target="_blank"
+                                        class="project-link" title="GitHub">
                                         <i class="bi bi-github"></i>
                                     </a>
                                 </div>
@@ -354,7 +358,10 @@
                         <div class="project-content">
                             <h5 class="project-title">Maç Sonucu Tahmin Modeli</h5>
                             <p class="project-description">
-                                Yakında...
+                                Maç sonuçlarını "Galibiyet", "Beraberlik" ve "Mağlubiyet" şeklinde sınıflandırmak
+                                amacıyla
+                                beş farklı Transformer tabanlı model geliştirdim. Geliştirdiğim modelleri çeşitli
+                                performans metrikleri kullanarak karşılaştırdım.
                             </p>
                             <div class="project-tech">
                                 <span class="tech-tag">Python</span>
