feat:index.html updated!

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             <span class="cursor">|</span>
                         </h2>
                         <p class="hero-description mb-4 fade-in-delay-3">
-                            Yazılım geliştirme tutkusu olan, sürekli öğrenmeye açık bir developer.
+                            <!--Yazılım geliştirme tutkusu olan, sürekli öğrenmeye açık bir developer.-->
                         </p>
                         <div class="hero-buttons fade-in-delay-4">
                             <a href="#projects" class="btn btn-primary btn-lg me-3">
@@ -85,12 +85,12 @@
                 <div class="col-lg-6">
                     <div class="hero-image text-center fade-in-delay-6">
                         <div class="profile-container">
-                            <div class="profile-bg"></div>
+                            <!--<div class="profile-bg"></div>-->
                             <div class="code-animation">
                                 <pre class="code-snippet">
 <span class="code-keyword">const</span> <span class="code-variable">developer</span> = {
   <span class="code-property">name</span>: <span class="code-string">'Ensar Akbaş'</span>,
-    <span class="code-property">role</span>: <span class="code-string">'3rd Year Information System Engineering Student'</span>,
+    <span class="code-property">role</span>: <span class="code-string">'4th Year Information System Engineering Student'</span>,
       <span class="code-property">location</span>: <span class="code-string">'Kocaeli'</span>,
   <span class="code-property">passion</span>: <span class="code-string">'Coding'</span>,
   <span class="code-property">status</span>: <span class="code-string">'Learning'</span>,
@@ -120,14 +120,14 @@
                     <div class="row align-items-center">
                         <div class="col-lg-6 mb-4">
                             <div class="about-content">
-                                <h3 class="mb-3">Merhaba</h3>
+                                <h3 class="mb-1">Merhaba!</h3>
                                 <p class="text-muted mb-4">
-                                    Ben Ensar Akbaş, Kocaeli Üniversitesi Bilişim Sistemleri Mühendisliği 3.
+                                    Kocaeli Üniversitesi Bilişim Sistemleri Mühendisliği 4.
                                     sınıf öğrencisiyim. Yazılım geliştirme alanında kendimi sürekli geliştiren ve yeni
                                     teknolojilere tutkuyla ilgi duyan bir geliştirici adayıyım. Özellikle yapay zeka
                                     gibi yenilikçi teknolojilere büyük ilgi duyuyor, projelerde hem öğrenmekten hem de
                                     üretmekten büyük keyif alıyorum. Sektörde deneyim kazanarak bilgi birikimimi
-                                    derinleştirmeyi ve öğrendiklerimi yaratıcı çözümler üretmek için kullanmayı
+                                    derinleştirmeyi ve öğrendiklerimi yenilikçi çözümler üretmek için kullanmayı
                                     hedefliyorum.
                                 </p>
 
@@ -135,6 +135,7 @@
                         </div>
                         <div class="col-lg-6">
                             <div class="about-features">
+                                <!--
                                 <div class="feature-item d-flex mb-4">
                                     <div class="feature-icon me-3">
                                         <i class="bi bi-lightbulb text-primary"></i>
@@ -145,6 +146,7 @@
                                             çözmeyi seviyorum.</p>
                                     </div>
                                 </div>
+                                -->
                                 <div class="feature-item d-flex mb-4">
                                     <div class="feature-icon me-3">
                                         <i class="bi bi-graph-up text-primary"></i>
@@ -365,6 +367,7 @@
                             </p>
                             <div class="project-tech">
                                 <span class="tech-tag">Python</span>
+                                <span class="tech-tag">PyTorch</span>
                             </div>
                         </div>
                     </div>
